clib/libfli.h


/**
 * @brief An opaque handle used by library functions to refer to FLI hardware.
 * 
 */
typedef long flidev_t;


/**
 * @brief The domain of an FLI device.  This consists of a bitwise ORed
 * combination of interface method and device type.  Valid interfaces
 * are \texttt{FLIDOMAIN_PARALLEL_PORT}, \texttt{FLIDOMAIN_USB},
 * \texttt{FLIDOMAIN_SERIAL}, and \texttt{FLIDOMAIN_INET}.  Valid
 * device types are \texttt{FLIDEVICE_CAMERA},
 * \texttt{FLIDOMAIN_FILTERWHEEL}, and \texttt{FLIDOMAIN_FOCUSER}.
 * 
 * @see FLIOpen
 * @see FLIList
 * 
 */
typedef long flidomain_t;
/**
 * @brief Parallel port interface domain
 * 
 */
#define FLIDOMAIN_PARALLEL_PORT (0x01)
/**
 * @brief USB interface domain
 * 
 */
#define FLIDOMAIN_USB (0x02)
/**
 * @brief Serial interface domain
 * 
 */
#define FLIDOMAIN_SERIAL (0x03)
/**
 * @brief Internet interface domain
 * 
 */
#define FLIDOMAIN_INET (0x04)
/**
 * @brief Camera device
 * 
 */
#define FLIDEVICE_CAMERA (0x100)

/**
   The gray-scale bit depth for an FLI camera device.  Valid bit
   depths are \texttt{FLI_MODE_8BIT} and \texttt{FLI_MODE_16BIT}.

   @see FLISetBitDepth
*/
typedef long flibitdepth_t;


#define FLI_MODE_8BIT (0)
#define FLI_MODE_16BIT (1)

/**
 * @brief Type used for shutter operations for an FLI camera device.  Valid
 * shutter types are FLI_SHUTTER_CLOSE,
 * FLI_SHUTTER_OPEN,
 * FLI_SHUTTER_EXTERNAL_TRIGGER,
 * FLI_SHUTTER_EXTERNAL_TRIGGER_LOW, and
 * FLI_SHUTTER_EXTERNAL_TRIGGER_HIGH.
 * 
 * @see FLIControlShutter
 * 
 */
typedef long flishutter_t;


#define FLI_SHUTTER_CLOSE (0x0000)
#define FLI_SHUTTER_OPEN (0x0001)
#define FLI_SHUTTER_EXTERNAL_TRIGGER (0x0002)
#define FLI_SHUTTER_EXTERNAL_TRIGGER_LOW (0x0002)
#define FLI_SHUTTER_EXTERNAL_TRIGGER_HIGH (0x0004)

/**
   Type used for background flush operations for an FLI camera device.  Valid
   bgflush types are \texttt{FLI_BGFLUSH_STOP} and
   \texttt{FLI_BGFLUSH_START}.

   @see FLIControlBackgroundFlush
*/
typedef long flibgflush_t;


#define FLI_BGFLUSH_STOP (0x0000)
#define FLI_BGFLUSH_START (0x0001)
#      define LIBFLIAPI long __stdcall
/* The module definition file precludes using __declspec(dllexport) */
/*#        define LIBFLIAPI __declspec(dllexport) long __stdcall    */
#      define LIBFLIAPI long __stdcall
#        define LIBFLIAPI __declspec(dllimport) long __stdcall
#    define LIBFLIAPI long


/**
 * @brief Get the remaining exposure time in milliseconds.
 * 
 * @param dev Camera handle.
 * @param timeleft Pointer to a long where the remaining exposure time will be stored.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIGetExposureStatus(flidev_t dev, long *timeleft);


/**
 * @brief Set the temperature of a given device.
 * 
 * @param dev Camera handle.
 * @param temperature Temperture set point in degrees Celsius. Valid values are between -55 and 45.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLISetTemperature(flidev_t dev, double temperature);


/**
 * @brief Get the current temperature of a given device.
 * 
 * @param dev Camerea handle.
 * @param temperature Temperature of the camera cold finger in degrees Celsius.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIGetTemperature(flidev_t dev, double *temperature);


/**
 * @brief Get the current power of the cooler in milliwatts.
 * 
 * @param dev Device handle.
 * @param power Power of the cooler in milliwatts.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIGetCoolerPower(flidev_t dev, double *power);


/**
 * @brief Grab a row of an image. This function grabs the next available row of the image from the
 * camera device `dev`. The row of width `width` is stored in the buffer pointed to by `buff`.
 * The size of the buffer pointed to by `buff` must take into account the bit depth of the image,
 * meaning the buffer must be at least `width` bytes long for 8-bit images and `2 * width` bytes for
 * 16-bit images.
 * 
 * @param dev Camera handle.
 * @param buff Pointer to where the next row of the image will be stored.
 * @param width Row width in pixels.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIGrabRow(flidev_t dev, void *buff, size_t width);


/**
 * @brief Expose a frame for a given camera. This function exposes a frame according to
 * the settings (image area, exposure time, bit depth etc.) of the camera `dev`. The settings
 * of `dev` must be valid for the camera device. They are set by calling the appropriate `set`
 * library functions.
 * Note: This function returns after the exposure has started.
 * 
 * @param dev Camera handle.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIExposeFrame(flidev_t dev);


/**
 * @brief Flush a number of rows for a given camera. This function flushes `rows` rows of the image
 * from the camera device `dev`. The rows are flushed `repeat` times.
 * 
 * @param dev Camera handle.
 * @param rows Number of rows to flush.
 * @param repeat Number of times to repeat the flush.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIFlushRow(flidev_t dev, long rows, long repeat);


/**
 * @brief Set the number of flushes for a given camera. This function sets the number of flushes
 * for the camera device `dev` to `nflushes`.
 * 
 * @param dev Camera handle.
 * @param nflushes Number of flushes.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLISetNFlushes(flidev_t dev, long nflushes);


/**
 * @brief Set the bit depth for a given camera. This function sets the bit depth for the camera
 * device `dev` to `bitdepth`.
 * 
 * @param dev Camera handle.
 * @param bitdepth Bit depth. Valid values are `FLI_MODE_8BIT` and `FLI_MODE_16BIT`.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLISetBitDepth(flidev_t dev, flibitdepth_t bitdepth);

LIBFLIAPI FLIReadIOPort(flidev_t dev, long *ioportset);

LIBFLIAPI FLIWriteIOPort(flidev_t dev, long ioportset);

LIBFLIAPI FLIConfigureIOPort(flidev_t dev, long ioportset);


/**
 * @brief Acquire an exclusive lock (`mutex`) on the device `dev`. This function
 * prevents other threads or processes from accessing the device while the lock is held.
 * 
 * @param dev Device handle.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLILockDevice(flidev_t dev);


/**
 * @brief Release the lock (`mutex`) on the device `dev`. This function allows other threads
 * or processes to access the device.
 * 
 * @param dev Device handle.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIUnlockDevice(flidev_t dev);


/**
 * @brief Control the shutter on a camera.
 * 
 * @param dev Camera handle.
 * @param shutter How to control the shutter. Valid values are 
 *    - `FLI_SHUTTER_CLOSE`: Close the shutter,
 *    - `FLI_SHUTTER_OPEN`: Open the shutter, 
 *    - `FLI_SHUTTER_EXTERNAL_TRIGGER`: Exposure starts on logic low on `I/O[0]`,
 *    - `FLI_SHUTTER_EXTERNAL_TRIGGER_LOW`: Same as `FLI_SHUTTER_EXTERNAL_TRIGGER`,
 *    - `FLI_SHUTTER_EXTERNAL_TRIGGER_HIGH`: Exposure starts on logic high on `I/O[0]`. May not be available on all cameras.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIControlShutter(flidev_t dev, flishutter_t shutter);


/**
 * @brief Enables background flushing of the CCD array. This function 
 * enables or disables background flushing of the CCD array. The background
 * flushing is stopped whenever `FLIExposeFrame()`/`FLIControlShutter()` is called.
 * Note: This function is only available on some cameras.
 * 
 * @param dev Camera handle.
 * @param bgflush Enable or disable background flushing. Valid values are
 *   - `FLI_BGFLUSH_STOP`: Disable background flushing,
 *   - `FLI_BGFLUSH_START`: Enable background flushing.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIControlBackgroundFlush(flidev_t dev, flibgflush_t bgflush);

LIBFLIAPI FLISetDAC(flidev_t dev, unsigned long dacset);


/**
 * @brief List all available devices in the given domain. 
 * This function returns a NULL-terminated list of all 
 * available devices in the given domain. The list is 
 * stored in the variable pointed to by `names`.
 * 
 * @param domain Domain to list devices for. Valid domains are
 *  - `FLIDOMAIN_PARALLEL_PORT`,
 *  - `FLIDOMAIN_USB`,
 *  - `FLIDOMAIN_SERIAL`, and
 *  - `FLIDOMAIN_INET`.
 * Valid device types are
 *  - `FLIDEVICE_CAMERA`,
 *  - `FLIDOMAIN_FILTERWHEEL`, and
 *  - `FLIDOMAIN_FOCUSER`.
 * @param names Pointer to where the list of device names will be stored.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIList(flidomain_t domain, char ***names);


/**
 * @brief Free a list of device names. This function frees the memory 
 * allocated for the list of device names.
 * 
 * @param names Pointer to the list of device names.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIFreeList(char **names);


LIBFLIAPI FLIGetFilterName(flidev_t dev, long filter, char *name, size_t len);

LIBFLIAPI FLISetActiveWheel(flidev_t dev, long wheel);

LIBFLIAPI FLIGetActiveWheel(flidev_t dev, long *wheel);


LIBFLIAPI FLISetFilterPos(flidev_t dev, long filter);

LIBFLIAPI FLIGetFilterPos(flidev_t dev, long *filter);

LIBFLIAPI FLIGetFilterCount(flidev_t dev, long *filter);


LIBFLIAPI FLIStepMotor(flidev_t dev, long steps);

LIBFLIAPI FLIStepMotorAsync(flidev_t dev, long steps);

LIBFLIAPI FLIGetStepperPosition(flidev_t dev, long *position);

LIBFLIAPI FLIGetStepsRemaining(flidev_t dev, long *steps);

LIBFLIAPI FLIHomeFocuser(flidev_t dev);


/**
 * @brief Create a list of devices in the given domain.
 * Use `FLIListFirst()` and `FLIListNext()` to iterate over the list.
 * Use `FLIDeleteList()` to free the list.
 * 
 * @param domain Domain to search for devices. Valid domains are
 * - `FLIDOMAIN_PARALLEL_PORT`,
 * - `FLIDOMAIN_USB`,
 * - `FLIDOMAIN_SERIAL`, and
 * - `FLIDOMAIN_INET`.
 * Supply `0` to search all domains.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLICreateList(flidomain_t domain);


/**
 * @brief Delete a list of devices.
 * 
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIDeleteList(void);


/**
 * @brief Get the first device in the list.
 * 
 * @param domain Pointer to the domain of the first device.
 * @param filename Pointer to a character buffer where the filename of the first device will be stored.
 * @param fnlen Size of the buffer pointed to by `filename`.
 * @param name Pointer to a character buffer where the name of the first device will be stored.
 * @param namelen Size of the buffer pointed to by `name`.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIListFirst(flidomain_t *domain, char *filename, size_t fnlen, char *name, size_t namelen);


/**
 * @brief Get the next device in the list.
 * 
 * @param domain Pointer to the domain of the next device.
 * @param filename Pointer to a character buffer where the filename of the next device will be stored.
 * @param fnlen Size of the buffer pointed to by `filename`.
 * @param name Pointer to a character buffer where the name of the next device will be stored.
 * @param namelen Size of the buffer pointed to by `name`.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIListNext(flidomain_t *domain, char *filename, size_t fnlen, char *name, size_t namelen);