src/fli_ffi.rs

extern "C" {
    #[doc = " @brief Get the remaining exposure time in milliseconds.\n\n @param dev Camera handle.\n @param timeleft Pointer to a long where the remaining exposure time will be stored.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetExposureStatus(
        dev: flidev_t,
        timeleft: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the temperature of a given device.\n\n @param dev Camera handle.\n @param temperature Temperture set point in degrees Celsius. Valid values are between -55 and 45.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetTemperature(dev: flidev_t, temperature: f64) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the current temperature of a given device.\n\n @param dev Camerea handle.\n @param temperature Temperature of the camera cold finger in degrees Celsius.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetTemperature(dev: flidev_t, temperature: *mut f64) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the current power of the cooler in milliwatts.\n\n @param dev Device handle.\n @param power Power of the cooler in milliwatts.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetCoolerPower(dev: flidev_t, power: *mut f64) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Grab a row of an image. This function grabs the next available row of the image from the\n camera device `dev`. The row of width `width` is stored in the buffer pointed to by `buff`.\n The size of the buffer pointed to by `buff` must take into account the bit depth of the image,\n meaning the buffer must be at least `width` bytes long for 8-bit images and `2 * width` bytes for\n 16-bit images.\n\n @param dev Camera handle.\n @param buff Pointer to where the next row of the image will be stored.\n @param width Row width in pixels.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGrabRow(
        dev: flidev_t,
        buff: *mut ::std::os::raw::c_void,
        width: usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Expose a frame for a given camera. This function exposes a frame according to\n the settings (image area, exposure time, bit depth etc.) of the camera `dev`. The settings\n of `dev` must be valid for the camera device. They are set by calling the appropriate `set`\n library functions.\n Note: This function returns after the exposure has started.\n\n @param dev Camera handle.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIExposeFrame(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Flush a number of rows for a given camera. This function flushes `rows` rows of the image\n from the camera device `dev`. The rows are flushed `repeat` times.\n\n @param dev Camera handle.\n @param rows Number of rows to flush.\n @param repeat Number of times to repeat the flush.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIFlushRow(
        dev: flidev_t,
        rows: ::std::os::raw::c_long,
        repeat: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the number of flushes for a given camera. This function sets the number of flushes\n for the camera device `dev` to `nflushes`.\n\n @param dev Camera handle.\n @param nflushes Number of flushes.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetNFlushes(
        dev: flidev_t,
        nflushes: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Set the bit depth for a given camera. This function sets the bit depth for the camera\n device `dev` to `bitdepth`.\n\n @param dev Camera handle.\n @param bitdepth Bit depth. Valid values are `FLI_MODE_8BIT` and `FLI_MODE_16BIT`.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetBitDepth(dev: flidev_t, bitdepth: flibitdepth_t) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIReadIOPort(
        dev: flidev_t,
        ioportset: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIWriteIOPort(
        dev: flidev_t,
        ioportset: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIConfigureIOPort(
        dev: flidev_t,
        ioportset: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Acquire an exclusive lock (`mutex`) on the device `dev`. This function\n prevents other threads or processes from accessing the device while the lock is held.\n\n @param dev Device handle.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLILockDevice(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Release the lock (`mutex`) on the device `dev`. This function allows other threads\n or processes to access the device.\n\n @param dev Device handle.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIUnlockDevice(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Control the shutter on a camera.\n\n @param dev Camera handle.\n @param shutter How to control the shutter. Valid values are\n    - `FLI_SHUTTER_CLOSE`: Close the shutter,\n    - `FLI_SHUTTER_OPEN`: Open the shutter,\n    - `FLI_SHUTTER_EXTERNAL_TRIGGER`: Exposure starts on logic low on `I/O[0]`,\n    - `FLI_SHUTTER_EXTERNAL_TRIGGER_LOW`: Same as `FLI_SHUTTER_EXTERNAL_TRIGGER`,\n    - `FLI_SHUTTER_EXTERNAL_TRIGGER_HIGH`: Exposure starts on logic high on `I/O[0]`. May not be available on all cameras.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIControlShutter(dev: flidev_t, shutter: flishutter_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Enables background flushing of the CCD array. This function\n enables or disables background flushing of the CCD array. The background\n flushing is stopped whenever `FLIExposeFrame()`/`FLIControlShutter()` is called.\n Note: This function is only available on some cameras.\n\n @param dev Camera handle.\n @param bgflush Enable or disable background flushing. Valid values are\n   - `FLI_BGFLUSH_STOP`: Disable background flushing,\n   - `FLI_BGFLUSH_START`: Enable background flushing.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIControlBackgroundFlush(
        dev: flidev_t,
        bgflush: flibgflush_t,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLISetDAC(dev: flidev_t, dacset: ::std::os::raw::c_ulong) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief List all available devices in the given domain.\n This function returns a NULL-terminated list of all\n available devices in the given domain. The list is\n stored in the variable pointed to by `names`.\n\n @param domain Domain to list devices for. Valid domains are\n  - `FLIDOMAIN_PARALLEL_PORT`,\n  - `FLIDOMAIN_USB`,\n  - `FLIDOMAIN_SERIAL`, and\n  - `FLIDOMAIN_INET`.\n Valid device types are\n  - `FLIDEVICE_CAMERA`,\n  - `FLIDOMAIN_FILTERWHEEL`, and\n  - `FLIDOMAIN_FOCUSER`.\n @param names Pointer to where the list of device names will be stored.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIList(
        domain: flidomain_t,
        names: *mut *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Free a list of device names. This function frees the memory\n allocated for the list of device names.\n\n @param names Pointer to the list of device names.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIFreeList(names: *mut *mut ::std::os::raw::c_char) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetFilterName(
        dev: flidev_t,
        filter: ::std::os::raw::c_long,
        name: *mut ::std::os::raw::c_char,
        len: usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLISetActiveWheel(
        dev: flidev_t,
        wheel: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetActiveWheel(
        dev: flidev_t,
        wheel: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLISetFilterPos(dev: flidev_t, filter: ::std::os::raw::c_long)
        -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetFilterPos(
        dev: flidev_t,
        filter: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetFilterCount(
        dev: flidev_t,
        filter: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIStepMotor(dev: flidev_t, steps: ::std::os::raw::c_long) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIStepMotorAsync(
        dev: flidev_t,
        steps: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetStepperPosition(
        dev: flidev_t,
        position: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetStepsRemaining(
        dev: flidev_t,
        steps: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIHomeFocuser(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Create a list of devices in the given domain.\n Use `FLIListFirst()` and `FLIListNext()` to iterate over the list.\n Use `FLIDeleteList()` to free the list.\n\n @param domain Domain to search for devices. Valid domains are\n - `FLIDOMAIN_PARALLEL_PORT`,\n - `FLIDOMAIN_USB`,\n - `FLIDOMAIN_SERIAL`, and\n - `FLIDOMAIN_INET`.\n Supply `0` to search all domains.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLICreateList(domain: flidomain_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Delete a list of devices.\n\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIDeleteList() -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the first device in the list.\n\n @param domain Pointer to the domain of the first device.\n @param filename Pointer to a character buffer where the filename of the first device will be stored.\n @param fnlen Size of the buffer pointed to by `filename`.\n @param name Pointer to a character buffer where the name of the first device will be stored.\n @param namelen Size of the buffer pointed to by `name`.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIListFirst(
        domain: *mut flidomain_t,
        filename: *mut ::std::os::raw::c_char,
        fnlen: usize,
        name: *mut ::std::os::raw::c_char,
        namelen: usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the next device in the list.\n\n @param domain Pointer to the domain of the next device.\n @param filename Pointer to a character buffer where the filename of the next device will be stored.\n @param fnlen Size of the buffer pointed to by `filename`.\n @param name Pointer to a character buffer where the name of the next device will be stored.\n @param namelen Size of the buffer pointed to by `name`.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIListNext(
        domain: *mut flidomain_t,
        filename: *mut ::std::os::raw::c_char,
        fnlen: usize,
        name: *mut ::std::os::raw::c_char,
        namelen: usize,
    ) -> ::std::os::raw::c_long;
}
